Fixes text alignment issue

--- a/src/styles/ui/TransactionCard.scss
+++ b/src/styles/ui/TransactionCard.scss
@@ -66,6 +66,7 @@
 
       .amount-status {
         font-weight: 600;
+        text-align: center;
 
         p {
           font-size: 18px;
